k8s/wealthops-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wealthops
  namespace: wealthops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: wealthops

  template:
    metadata:
      labels:
        app: wealthops

    spec:
      imagePullSecrets:
       - name: ecr-secret
      containers:

      - name: wealthops

        image: 076194732097.dkr.ecr.us-east-1.amazonaws.com/wealthops:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 5000
