k8s/wealthops-alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wealthops-alb
  namespace: wealthops
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wealthops
                port:
                  number: 5000
